# mfn

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: mfnConfig.cmake.in
src/: main.cpp
